--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
         <br>
         <nav class="navbar fixed-bottom navbar-light bg-light justify-content-center">
             <div class="nav-item text-center mx-2">
-                <button class="btn btn-outline-primary" data-menu="home">
+                <button class="btn btn-primary" data-menu="home">
                     <div class="d-flex flex-column align-items-center">
                         <i class="bi bi-house-fill" style="font-size: 1em;"></i>
                         <span>home</span>
@@ -57,7 +57,7 @@
                 </button>
             </div>
             <div class="nav-item text-center mx-2">
-                <button class="btn btn-outline-dark" data-menu="order">
+                <button class="btn btn-dark" data-menu="order">
                     <div class="d-flex flex-column align-items-center">
                         <i class="bi bi-cart-fill" style="font-size: 1em;"></i>
                         <span>order</span>
@@ -65,7 +65,7 @@
                 </button>
             </div>
             <div class="nav-item text-center mx-2">
-                <button class="btn btn-outline-dark flex-column align-items-center" data-menu="apply"
+                <button class="btn btn-dark flex-column align-items-center" data-menu="apply"
                     id="openApplyForALoanModalButton">
                     <div class="d-flex flex-column align-items-center">
                         <i class=""></i>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="nav-item text-center mx-2">
-                <button class="btn btn-outline-dark" data-menu="history">
+                <button class="btn btn-dark" data-menu="history">
                     <div class="d-flex flex-column align-items-center">
                         <i class="bi bi-clock-fill" style="font-size: 1em;"></i>
                         <span>history</span>
