--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -100,6 +100,40 @@
     </div>
 </div>
 
+<!-- Modal upload receipt of money transfer -->
+<div class="modal fade" id="uploadReceiptOfMoneyTransferModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="uploadReceiptOfMoneyTransferModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="uploadReceiptOfMoneyTransferModalLabel">receipt of money transfer form</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="uploadReceiptOfMoneyTransferAmount" class="form-label fw-bold">amount</label>
+                    <input type="text" class="form-control" id="uploadReceiptOfMoneyTransferAmount" readonly>
+                    <input type="hidden" class="form-control" id="uploadReceiptOfMoneyTransferDebtorId">
+                </div>
+                <div class="mb-3">
+                    <label for="uploadReceiptOfMoneyTransferDebtorName" class="form-label fw-bold">debtor name</label>
+                    <input type="text" class="form-control" id="uploadReceiptOfMoneyTransferDebtorName" readonly>
+                </div>
+                <div class="mb-3">
+                    <label for="proofPaymentFile" class="form-label fw-bold">upload receipt of payment</label>
+                    <input class="form-control" type="file" id="proofPaymentFile">
+                </div>
+            </div>
+
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="submitpayDebtFormButton">Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
 
@@ -113,7 +147,7 @@
     var getDebtorOrdersUrl = "{{ url_for('getDebtorOrders') }}";
     var getCreditorOrdersUrl = "{{ url_for('getCreditorOrders') }}";
     var getCreditorsUrl = "{{ url_for('getUsers') }}";
-    var createDebtUrl = "{{ url_for('createDebt') }}";
+    var createTransactionUrl = "{{ url_for('createTransaction') }}";
     var createPaymentUrl = "{{ url_for('createPayment') }}";
     var tableContainer = $('#tableContainer')
     var getCreditorByUniqueCodeUrl = "{{ url_for('getUserByUniquecode') }}";
@@ -142,8 +176,8 @@
         });
         $(".navbar button").on("click", function () {
             $(".navbar button").removeClass("btn-primary");
-            $(".navbar button").addClass("btn-dark");
-            $(this).removeClass("btn-dark");
+            $(".navbar button").addClass("btn-light");
+            $(this).removeClass("btn-light");
             $(this).addClass("btn-primary");
             menu = $(this).data("menu");
             console.log("Menu yang dipilih: " + menu);
@@ -230,7 +264,16 @@
 
         });
 
+        $(document).on("click", ".openUploadreceiptofMoneyTransferModalButton", function () {
+            var totalAmount = $(this).data('totalamount');
+            var debtorId = $(this).data('debtorid');
+            var debtorName = $(this).data('debtorname');
+            console.log(totalAmount,debtorId,debtorName)
+            $("#uploadReceiptOfMoneyTransferAmount").val(totalAmount);
+            $("#uploadReceiptOfMoneyTransferDebtorId").val(debtorId);
+            $("#uploadReceiptOfMoneyTransferDebtorName").val(debtorName);
 
+        });
 
 
     });
