--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -103,7 +103,6 @@
 
 
     </div>
-
     <!-- start loading modal -->
     <div class="modal" id="loadingModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-hidden="true">
@@ -120,7 +119,15 @@
     </div>
     <!-- end loading modal -->
 
+
+    <!-- start experiment -->
+    <button data-bs-toggle="collapse" data-bs-target="#demo">Collapsible</button>
+
+    <div id="demo" class="collapse">
+        Lorem ipsum dolor text....
     </div>
+
+    <!-- end experiment -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
@@ -129,14 +136,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
+
 
     <script>
 
     </script>
     <script>
+        $(document).ready(function () {
+
+        });
         var currentUser = {
             'uniqueCode': '{{ currentUser.uniqueCode }}',
             'name': '{{ currentUser.name }}',
@@ -192,9 +204,6 @@
         }
         function showModal(modal) {
             modal.modal('show');
-        }
-        function closeModal(modal) {
-            modal.modal('hide');
         }
 
         function showLoading() {
