--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,14 @@
     </style>
     <link rel="icon" href="{{ url_for('static', filename='images/favicon/favicon.png') }}" type="image/png">
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon/favicon.png') }}" type="image/png">
-
+    <style>
+        .stepper {
+            .line {
+                width: 1px;
+                background-color: lightgrey !important;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -101,151 +108,177 @@
 
 
 
-
-    </div>
-    <!-- start loading modal -->
-    <div class="modal" id="loadingModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content bg-transparent border-0">
-                <div class="modal-body">
-                    <div class="text-center">
-                        <div class="spinner-border" role="status">
+        <!-- start loading modal -->
+        <div class="modal" id="loadingModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content bg-transparent border-0">
+                    <div class="modal-body">
+                        <div class="text-center">
+                            <div class="spinner-border" role="status">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- end loading modal -->
 
+        <!-- end loading modal -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+            </script>
 
-    <!-- start experiment -->
-    <button data-bs-toggle="collapse" data-bs-target="#demo">Collapsible</button>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
 
-    <div id="demo" class="collapse">
-        Lorem ipsum dolor text....
-    </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
 
-    <!-- end experiment -->
+        <script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
+        <script>
+            $(document).ready(function () {
+                $(document).on("click", ".collapse-button", function () {
+                    var target = $(this).data('name');
+                    console.log("target : ", target)
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
-
-
-    <script>
-
-    </script>
-    <script>
-        $(document).ready(function () {
-
-        });
-        var currentUser = {
-            'uniqueCode': '{{ currentUser.uniqueCode }}',
-            'name': '{{ currentUser.name }}',
-            'email': '{{ currentUser.email }}'
-        };
-
-        console.log(currentUser)
+                    if ($(target).hasClass('show')) {
+                        console.log("target memiliki class show")
+                        $(target).collapse('hide');
+                    } else {
+                        console.log("target tidak memiliki class show")
+                        $('.collapse.show').collapse('hide');
+                        $("#" + target).collapse('show');
+                    }
+                    var $icon = $(this).find("i.bi");
+                    if ($icon.hasClass("bi-chevron-double-down")) {
+                        $icon.removeClass("bi-chevron-double-down").addClass("bi-chevron-double-up");
+                    } else {
+                        $icon.removeClass("bi-chevron-double-up").addClass("bi-chevron-double-down");
+                    }
+                });
 
 
-        function showAlert(message, alertType) {
-            var alertClass;
-            var alertIcon;
 
-            switch (alertType) {
-                case 'error':
-                    alertClass = 'alert-danger';
-                    alertIcon = 'bi-exclamation-triangle-fill';
-                    break;
-                case 'info':
-                    alertClass = 'alert-info';
-                    alertIcon = 'bi-info-circle-fill';
-                    break;
-                case 'success':
-                    alertClass = 'alert-success';
-                    alertIcon = 'bi-check-circle-fill';
-                    break;
-                default:
-                    alertClass = 'alert-warning';
-                    alertIcon = 'bi-exclamation-triangle-fill';
+            });
+            var currentUser = {
+                'uniqueCode': '{{ currentUser.uniqueCode }}',
+                'name': '{{ currentUser.name }}',
+                'email': '{{ currentUser.email }}'
+            };
+
+            console.log(currentUser)
+
+
+            function showAlert(message, alertType) {
+                var alertClass;
+                var alertIcon;
+
+                switch (alertType) {
+                    case 'error':
+                        alertClass = 'alert-danger';
+                        alertIcon = 'bi-exclamation-triangle-fill';
+                        break;
+                    case 'info':
+                        alertClass = 'alert-info';
+                        alertIcon = 'bi-info-circle-fill';
+                        break;
+                    case 'success':
+                        alertClass = 'alert-success';
+                        alertIcon = 'bi-check-circle-fill';
+                        break;
+                    default:
+                        alertClass = 'alert-warning';
+                        alertIcon = 'bi-exclamation-triangle-fill';
+                }
+
+                // Create a new alert element
+                var alertElement = document.createElement('div');
+                alertElement.classList.add('alert', alertClass, 'alert-dismissible', 'fade', 'show');
+                alertElement.role = 'alert';
+
+                var closeButton = document.createElement('button');
+                closeButton.type = 'button';
+                closeButton.classList.add('btn-close');
+                closeButton.dataset.bsDismiss = 'alert';
+                closeButton.ariaLabel = 'Close';
+
+                alertElement.innerHTML = '<i class="bi ' + alertIcon + '"></i> <strong>' + message + '</strong>';
+                alertElement.appendChild(closeButton);
+
+                // Append the alert to the container
+                document.getElementById('alertcontainer').appendChild(alertElement);
+
+                // Set a timeout to remove the alert after 3 seconds (3000 milliseconds)
+                setTimeout(function () {
+                    alertElement.remove();
+                }, 6000);
+            }
+            function showModal(modal) {
+                modal.modal('show');
             }
 
-            // Create a new alert element
-            var alertElement = document.createElement('div');
-            alertElement.classList.add('alert', alertClass, 'alert-dismissible', 'fade', 'show');
-            alertElement.role = 'alert';
+            function showLoading() {
+                $('#loadingModal').modal('show');
+            }
 
-            var closeButton = document.createElement('button');
-            closeButton.type = 'button';
-            closeButton.classList.add('btn-close');
-            closeButton.dataset.bsDismiss = 'alert';
-            closeButton.ariaLabel = 'Close';
+            function hideLoading() {
+                setTimeout(function () {
+                    $('#loadingModal').modal('hide');
+                }, 200);
 
-            alertElement.innerHTML = '<i class="bi ' + alertIcon + '"></i> <strong>' + message + '</strong>';
-            alertElement.appendChild(closeButton);
+            }
 
-            // Append the alert to the container
-            document.getElementById('alertcontainer').appendChild(alertElement);
 
-            // Set a timeout to remove the alert after 3 seconds (3000 milliseconds)
-            setTimeout(function () {
-                alertElement.remove();
-            }, 6000);
-        }
-        function showModal(modal) {
-            modal.modal('show');
-        }
-
-        function showLoading() {
-            $('#loadingModal').modal('show');
-        }
-
-        function hideLoading() {
-            setTimeout(function () {
+            function closeLoadingModal() {
                 $('#loadingModal').modal('hide');
-            }, 200);
+            }
+            function formatCurrencyIDR(amount) {
+                return new Intl.NumberFormat('id-ID', { style: 'currency', currency: 'IDR' }).format(amount);
+            }
 
-        }
+            function formattedDate(inputDate) {
+                return new Date(inputDate).toLocaleDateString('en-GB', {
+                    day: 'numeric',
+                    month: 'short',
+                    year: 'numeric'
+                });
+            }
+            function closeModal(modalId) {
+                var modal = document.getElementById(modalId);
+                modal.classList.remove('show');
+                modal.style.display = 'none';
+                document.body.classList.remove('modal-open');
+                var backdrop = document.getElementsByClassName('modal-backdrop');
+                document.body.removeChild(backdrop[0]);
+            }
+
+            function ubahFormatTanggal(tanggalString) {
+                // Buat objek Date dari string
+                var tanggalObj = new Date(tanggalString);
+
+                // Ambil bagian-bagian dari tanggal
+                var tanggal = tanggalObj.getDate();
+                var bulan = tanggalObj.toLocaleString('en-us', { month: 'short' });
+                var tahun = tanggalObj.getFullYear();
+                var jam = tanggalObj.getHours();
+                var menit = tanggalObj.getMinutes();
+                var detik = tanggalObj.getSeconds();
+
+                // Buat format output yang diinginkan
+                var tanggalHasil = tanggal + ' ' + bulan + ' ' + tahun + ' ' + jam + ':' + menit + ':' + detik;
+
+                return tanggalHasil;
+            }
 
 
-        function closeLoadingModal() {
-            $('#loadingModal').modal('hide');
-        }
-        function formatCurrencyIDR(amount) {
-            return new Intl.NumberFormat('id-ID', { style: 'currency', currency: 'IDR' }).format(amount);
-        }
-
-        function formattedDate(inputDate) {
-            return new Date(inputDate).toLocaleDateString('en-GB', {
-                day: 'numeric',
-                month: 'short',
-                year: 'numeric'
-            });
-        }
-        function closeModal(modalId) {
-            var modal = document.getElementById(modalId);
-            modal.classList.remove('show');
-            modal.style.display = 'none';
-            document.body.classList.remove('modal-open');
-            var backdrop = document.getElementsByClassName('modal-backdrop');
-            document.body.removeChild(backdrop[0]);
-        }
 
 
-
-
-    </script>
-    {% block scripts %}{% endblock %}
+        </script>
+        {% block scripts %}{% endblock %}
 
 </body>
 
